--- a/src/renderer/src/assets/style.css
+++ b/src/renderer/src/assets/style.css
@@ -1,3 +1,20 @@
 .text-center {
 	text-align: center;
 }
+
+.ringing {
+	color: var(--del-color);
+	animation: blinkAnim 0.5s step-start infinite;
+}
+
+@keyframes blinkAnim {
+	0% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
